--- a/todo.txt
+++ b/todo.txt
@@ -17,3 +17,19 @@ Poznatky:
 	DONE - pozriet conj, aby ked su tam nejake &&, tak sme to odchytili
 	
 		67A5 M:5987 T:a
+		
+		
+- Inter Text
+- paralel text
+- motivacia
+	- vlastny opis
+	- motivacne kecy
+- analyza
+	- podobne programy
+- Diskusia
+- co planjem  robit v lete
+	
+- Sweet
+- Musutelsa
+- OTS
+	
