Added Introduction to Doc

--- a/Doc/Bachelor Thesis/main.tex
+++ b/Doc/Bachelor Thesis/main.tex
@@ -43,15 +43,15 @@
 %% !!!! set your own definitions
 
 %-------definitions-----
-\newcommand{\Author}{Gerda Holubová}
-\newcommand{\Title}{My title}
-\newcommand{\Supervisor}{Super Supervisor}
-\newcommand{\Place}{Place}
-\newcommand{\Year}{Year}
-\newcommand{\Month}{Month}
+\newcommand{\Author}{Martin Nemček}
+\newcommand{\Title}{Spracovanie učebných textov}
+\newcommand{\Supervisor}{Ing. Miroslav Blšták}
+\newcommand{\Place}{FIIT STU BA}
+\newcommand{\Year}{2015}
+\newcommand{\Month}{December }
 \newcommand{\FIIT}{FIIT-0000-00000}
-\newcommand{\Field}{9.9.9 Field}
-\newcommand{\Program}{Program}
+\newcommand{\Field}{9.2.1 Informatika}
+\newcommand{\Program}{Informatika}
 
 %%
 %% DON'T TOUCH
